# cqd

./: LICENSE  README.md  pyproject.toml
src/cqd/: __init__.py  core.py
tests/: test_core.py
